[package]
name = "mash"
version = "0.1.0"
authors = ["Seth Stadick <sstadick@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.7.2"
anyhow = "1.0.39"
csv = "1.1.6"
env_logger = "0.8.3"
log = "0.4.14"
structopt = "0.3.21"
